--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1 {
     color: darkblue;
     font-size: 28px;
 }
+h2 {
+    color: darkblue;
+    font-size: 20px;
+}
 p {
     color: black;
     font-size: 18px;
